Build.gradle fuer Test anpassen und DummyTest hinzufuegen